--- a/paper/references.bib
+++ b/paper/references.bib
@@ -6,3 +6,29 @@
   year = {2023},
   url = {https://www.R-project.org/},
 }
+
+@Manual{cdip,
+title = {dplyr: A Grammar of Data Manipulation},
+author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller and Davis Vaughan},
+year = {2023},
+note = {R package version 1.1.4, https://github.com/tidyverse/dplyr},
+url = {https://dplyr.tidyverse.org},
+}
+
+
+@Book{citeg,
+  author = {Hadley Wickham},
+  title = {ggplot2: Elegant Graphics for Data Analysis},
+  publisher = {Springer-Verlag New York},
+  year = {2016},
+  isbn = {978-3-319-24277-4},
+  url = {https://ggplot2.tidyverse.org},
+}
+
+@Manual{cites,
+  title = {shiny: Web Application Framework for R},
+  author = {Winston Chang and Joe Cheng and JJ Allaire and Carson Sievert and Barret Schloerke and Yihui Xie and Jeff Allen and Jonathan McPherson and Alan Dipert and Barbara Borges},
+  year = {2023},
+  note = {R package version 1.8.0, https://github.com/rstudio/shiny},
+  url = {https://shiny.posit.co/},
+}
